--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "ejs": "2.5.5",
     "flowstate": "^0.4.0",
     "querystring": "^0.2.0",
+    "saml": "^1.0.0",
+    "xml-crypto": "^2.0.0",
     "xmldom": "npm:vrkkpa-xmldom@^0.1.19-auth0.3-sf1.0",
-    "saml": "^0.15.0-rc.0",
-    "xml-crypto": "^1.5.3",
     "xpath": "0.0.5",
     "xtend": "^1.0.3"
   },
@@ -36,7 +36,7 @@
     "express": "^4.17.1",
     "express-session": "^1.14.2",
     "istanbul": "^0.4.5",
-    "mocha": "~7.0.1",
+    "mocha": "^8.2.1",
     "request": "~2.88.0",
     "timekeeper": "^2.2.0",
     "uid2": "0.0.3"
